new: personalize anime event project
