# internal/model/user_model.go
@@ -7,5 +7,6 @@ type User struct {
 	Name     string `json:"name"`
 	Email    string `json:"email" gorm:"unique;not null"`
 	Password string `json:"-"`
+	Role     Role   `json:"role" gorm:"type:varchar(20);not null;default:'attendee'"`
 	Events   []Event
 }
